--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d –watch",
-    "live-server": "live-server"
+    "build": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -23,10 +22,15 @@
     "@babel/preset-react": "^7.13.13",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
-    "live-server": "^1.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
   }
 }
