--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack serve"
+    "build": "webpack serve",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,9 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "axios": "^0.21.1",
+    "babel-core": "6.26.3",
     "babel-loader": "^8.2.2",
+    "enzyme": "3.11.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "prettier": "^2.2.1",
@@ -31,6 +35,11 @@
     "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
