--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack serve"
+    "build": "webpack",
+    "serve": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,12 +26,11 @@
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "prettier": "^2.2.1",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
   }
 }
