--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --watch",
     "serve": "nodemon server/index.js"
   },
   "repository": {
