--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch",
+    "both": "./both.sh",
+    "build": "webpack -w",
     "serve": "nodemon server/index.js"
   },
   "repository": {
@@ -25,9 +26,9 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
-    "prettier": "^2.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^4.46.0",
