--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
-    "both": "./both.sh",
+    "start": "./both.sh",
     "build": "webpack -w",
-    "serve": "nodemon server/index.js"
-=======
-    "build": "webpack serve",
+    "serve": "nodemon server/index.js",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors"
->>>>>>> bc3c7b590a6e022ec3d454a5a2e2168096b5fe02
   },
   "repository": {
     "type": "git",
@@ -47,8 +43,6 @@
     "react-dom": "^17.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
-<<<<<<< HEAD
-=======
   },
   "devDependencies": {
     "babel-jest": "^26.6.3",
@@ -57,6 +51,5 @@
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.2",
     "webpack-dev-server": "^3.11.2"
->>>>>>> bc3c7b590a6e022ec3d454a5a2e2168096b5fe02
   }
 }
