--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -w",
+    "build": "webpack serve",
     "serve": "nodemon server/index.js",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -19,10 +19,10 @@
     "url": "https://github.com/SYMPL-Systems/catwalk/issues"
   },
   "homepage": "https://github.com/SYMPL-Systems/catwalk#readme",
-   "babel": {
+  "babel": {
     "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   },
   "dependencies": {
