--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.2",
-    "webpack-dev-server": "^3.11.2"
+    "react-test-renderer": "^17.0.2"
   }
 }
