--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js -w",
     "serve": "nodemon server/index.js",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors"
