--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "catwalk",
   "version": "1.0.0",
   "description": "Front-End Capstone Project",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "serve": "nodemon server/index.js",
+    "build": "webpack",
+    "serve": "nodemon",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors"
   },
@@ -50,7 +50,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.2",
-    "webpack-dev-server": "^3.11.2"
+    "react-test-renderer": "^17.0.2"
   }
 }
