--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catwalk",
   "version": "1.0.0",
   "description": "Front-End Capstone Project",
-  "main": "server/index.js",
+  "main": "server/start.js",
   "scripts": {
     "build": "webpack",
     "serve": "nodemon",
@@ -54,6 +54,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "supertest": "^6.1.3"
   }
 }
