--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
       "@babel/preset-react"
     ]
   },
+  "jest": {
+    "verbose": true
+  },
   "dependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
@@ -44,7 +47,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
   },
@@ -55,6 +57,7 @@
     "babel-preset-react": "^6.24.1",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.2",
+    "regenerator-runtime": "^0.13.7",
     "supertest": "^6.1.3"
   }
 }
