--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.13.15",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-jest": "^26.6.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
