Installing React Testing software and slightly reconfiguring test config files.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     ]
   },
   "jest": {
-    "verbose": true
+    "verbose": true,
+    "setupFiles": [
+      "<rootDir>/src/Tests/enzyme.setup.js"
+    ]
   },
   "dependencies": {
     "@babel/core": "^7.13.15",
