--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "source-map": "^0.5.7",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
   },
