--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
