--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.13.1",
     "underscore": "^1.13.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0"
