--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-End Capstone Project",
   "main": "server/start.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack serve --progress",
     "serve": "nodemon",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -54,7 +54,8 @@
     "react-modal": "^3.13.1",
     "underscore": "^1.13.1",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.13.15",
